--- a/Covid_International_Sample_Report.Rmd
+++ b/Covid_International_Sample_Report.Rmd
@@ -56,11 +56,9 @@ h4.date {
 }
 ```
 
-
 # Analysis of the international sample
 
 ## Loading the dataset, required R packages and data wrangling
-
 
 ```{r loading packages and dataset, message=FALSE, warning=FALSE}
 # The following packages might need to be installed onto your version 
@@ -88,7 +86,6 @@ data_corr <- data
 options(digits = 3)
 
 ```
-
 
 ```{r}
 # Calculating PH8
@@ -136,8 +133,8 @@ data <- data %>%
             `4` = 3),
          PHQ8 = Q49_1_rec + Q49_2_rec + Q49_3_rec + Q49_4_rec + Q49_5_rec + Q49_6_rec + Q49_7_rec + Q49_8_rec)
 
-# Filtering out the Czech dataset, renaming variables to identical ones as before
-data <- data %>% 
+# Renaming variables to identical ones as before
+data_full <- data %>% 
   transmute(country = recode_factor(as_factor(Country),
             `1` = "IT",
             `2` = "FR",
@@ -222,109 +219,76 @@ data <- data %>%
             q33_03_concern_survival_covid = Q36_3,
             q33_04_concern_change_employment = Q36_4,
             q33_05_concern_infecting_others = Q36_5,
-            PHQ8 = PHQ8) %>% 
-  filter(country != "CZ")
+            PHQ8 = PHQ8) 
 
+# Filtering out Czech sample for analyses
+data <- data_full %>%
+        filter(country != "CZ")
 
 ```
 
+## Descriptive statistics
 
+### Sample descriptive statistics {.tabset .tabset-pills}
 
-### Visuals {.tabset .tabset-pills}
-
-#### Depression by gender and age group
-
+#### Population pyramid of the full sample
 
 ```{r}
-data %>% 
-  filter(q01_gender != "other", q02_age_group != "NA") %>% 
-  ggplot(aes(y = PHQ8, x = q01_gender)) +
-         geom_boxplot(na.rm = TRUE, aes(color = q01_gender)) +
-         theme_bw() +
-         theme(legend.position = "none") +
-         facet_grid(cols = vars(q02_age_group)) + 
-         scale_color_npg()
-```
-#### Age and depression by gender
+data_full_1_3 <- data_full %>% 
+  filter(country != "IT", 
+         country != "FR", 
+         country != "PL") %>% 
+  filter(q02_age != "NA", q01_gender != "NA") 
 
-```{r}
-# For reproducibility of results
-set.seed(2021)
+data_full_4_6 <- data_full %>% 
+  filter(country != "UK", 
+         country != "CZ", 
+         country != "SW") %>%  
+  filter(q02_age != "NA", q01_gender != "NA")
 
-data %>% 
-  filter(q01_gender != "other") %>% 
-  ggplot(aes(x = q02_age, y = PHQ8)) +
-         geom_jitter(na.rm	= TRUE, size = 1, alpha = 0.1) +
-         stat_smooth(method = "gam", formula = y ~ x, na.rm	= TRUE, aes(color = q01_gender)) +
-         theme_bw() +
-         scale_x_continuous(limits = c(16, 92), 
-                     breaks = seq(from = 16, to = 92, by = 8)) + 
-         scale_color_npg() 
-```
+data_full_1_3 %>%
+  ggplot(aes(x = q02_age, 
+             fill = q01_gender)) + 
+  geom_bar(data = subset(data_full_1_3, 
+                         q01_gender == "female")) + 
+  geom_bar(data = subset(data_full_1_3, 
+                         q01_gender == "male"), 
+                         aes(y = ..count..*(-1))) + 
+  scale_y_continuous(breaks = seq(-250, 250, 50), 
+                     labels = abs(seq(-250, 250, 50)), 
+                     limits = c(-100, 100)) + 
+  scale_x_continuous(breaks = seq(15, 100, 5), 
+                     labels = seq(15, 100, 5), 
+                     limits = c(15, 100)) +
+  coord_flip() +
+  theme_bw() +
+  facet_grid(cols = vars(country)) + 
+  scale_color_npg() 
 
-#### Depression by gender and relationship type
-```{r}
-# For reproducibility of results
-set.seed(2021)
+data_full_4_6 %>%
+  ggplot(aes(x = q02_age, 
+             fill = q01_gender)) + 
+  geom_bar(data = subset(data_full_4_6, 
+                         q01_gender == "female")) + 
+  geom_bar(data = subset(data_full_4_6, 
+                         q01_gender == "male"), 
+                         aes(y = ..count..*(-1))) + 
+  scale_y_continuous(breaks = seq(-250, 250, 50), 
+                     labels = abs(seq(-250, 250, 50)), 
+                     limits = c(-100, 100)) + 
+  scale_x_continuous(breaks = seq(15, 100, 5), 
+                     labels = seq(15, 100, 5), 
+                     limits = c(15, 100)) +
+  coord_flip() +
+  theme_bw() +
+  facet_grid(cols = vars(country)) + 
+  scale_color_npg() 
 
-data %>% 
-  filter(q01_gender != "other", q03_relationship_type != "NA") %>% 
-  ggplot(aes(y = PHQ8, x = q01_gender)) +
-         geom_boxplot(na.rm = TRUE, aes(color = q01_gender)) +
-         theme_bw() +
-         theme(legend.position = "none") +
-         facet_grid(cols = vars(q03_relationship_type)) + 
-         scale_color_npg()
-```
-#### Depression by gender and education attainment
-```{r}
-# For reproducibility of results
-set.seed(2021)
-
-data %>%
-  filter(q01_gender != "other", q11_education != "NA") %>% 
-  ggplot(aes(y = PHQ8, x = q01_gender)) +
-         geom_boxplot(na.rm = TRUE, aes(color = q01_gender)) +
-         theme_bw() +
-         theme(legend.position = "none") +
-         facet_grid(cols = vars(q11_education)) + 
-         scale_color_npg() 
 ```
 
-#### Depression by gender and children
-```{r}
-# For reproducibility of results
-set.seed(2021)
+#### Descriptives of Depression index (PHQ8)
 
-data %>%
-  filter(q01_gender != "other") %>% 
-  ggplot(aes(y = PHQ8, x = q01_gender)) +
-         geom_boxplot(na.rm = TRUE, aes(color = q01_gender)) +
-         theme_bw() +
-         scale_x_discrete(labels = c("Four", "Six")) +
-         theme(legend.position = "none") +
-         facet_grid(cols = vars(q04_children)) + 
-         scale_color_npg()
-```
-
-#### Depression by gender and SRH
-```{r}
-# For reproducibility of results
-set.seed(2021)
-
-data %>%
-  filter(q01_gender != "other", q47_self_reporting_health != "NA") %>% 
-  ggplot(aes(y = PHQ8, x = q01_gender)) +
-         geom_boxplot(na.rm = TRUE, aes(color = q01_gender)) +
-         theme_bw() +
-         theme(legend.position = "none") +
-         facet_grid(cols = vars(q47_self_reporting_health)) + 
-         scale_color_npg()
-```
-
-## Sample descriptive statistics: Depression index (PHQ8)
-
-```{r PHQ8 descriptives}
+```{r, comment = ""}
 # To summarize the dependent continuous variable, we use the descriptives() 
 # function from the jmv package.
 
@@ -337,21 +301,43 @@ descriptives <- jmv::descriptives(
     range = TRUE,
     sd = TRUE,
     quart = TRUE)
-```
 
-### PHQ8 results table {.tabset .tabset-pills}
-
-#### Plots
-
-```{r, comment = ""}
-descriptives$plots
-```
-
-#### Descriptives
-
-```{r, comment = ""}
 descriptives$descriptives
 ```
+
+#### Plots of Depression index (PHQ8)
+
+```{r, comment = ""}
+data %>%
+  filter(PHQ8 != "NA") %>% 
+  ggplot(aes(y = PHQ8)) +
+         geom_boxplot(fill = "#4DBBD599") +
+         theme_bw() +
+         scale_y_continuous(breaks = seq(0, 24, 1), 
+                            labels = seq(0, 24, 1), 
+                            limits = c(0, 24)) +
+         theme(legend.position = "none", 
+               axis.title.x = element_blank(),
+               axis.text.x = element_blank(), 
+               axis.ticks.x = element_blank(), 
+               axis.line.x = element_blank(), 
+               panel.grid.major.x = element_blank(), 
+               panel.grid.minor = element_blank())
+
+data %>% 
+  filter(PHQ8 != "NA") %>% 
+  ggplot(aes(x = as_factor(PHQ8))) +
+         geom_bar(fill = "#4DBBD599") +
+         scale_y_continuous(breaks = seq(0, 700, 50), 
+                            labels = seq(0, 700, 50), 
+                            limits = c(0, 700)) +
+         theme_bw() +
+         theme(legend.position = "none") +
+         xlab("PHQ8")
+
+```
+
+#### Descriptives of demographic variables
 
 ```{r sample demography descriptives}
 # To summarize the key demographic variables, we use the descriptives() 
@@ -372,22 +358,357 @@ demo_descriptives <- jmv::descriptives(
     sd = FALSE,
     min = FALSE,
     max = FALSE)
-```
 
-
-### Demographic characteristics results table {.tabset .tabset-pills}
-
-#### Plots
-
-```{r, comment = ""}
-demo_descriptives$plots
-```
-
-#### Frequencies
-
-```{r, comment = ""}
 demo_descriptives$frequencies	
+
 ```
+
+#### Plots of demographic variables
+
+```{r, comment = ""}
+data %>% 
+  filter(q01_gender %in% c("male", "female"), 
+         q02_age_group != "NA") %>% 
+  ggplot(aes(x = q01_gender)) +
+         geom_bar(fill = "#4DBBD599") +
+         scale_y_continuous(breaks = seq(0, 3500, 500), 
+                            labels = seq(0, 3500, 500), 
+                            limits = c(0, 3500)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.x = element_blank()) +
+         facet_grid(cols = vars(q02_age_group))
+
+data %>% 
+  filter(q01_gender %in% c("male", "female"), 
+         q03_relationship_type != "NA") %>% 
+  ggplot(aes(x = q01_gender)) +
+         geom_bar(fill = "#4DBBD599") +
+         scale_y_continuous(breaks = seq(0, 2500, 250), 
+                            labels = seq(0, 2500, 250), 
+                            limits = c(0, 2500)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.x = element_blank()) +
+         facet_grid(cols = vars(q03_relationship_type), 
+                    rows = vars(q04_children))
+
+data %>% 
+  filter(q01_gender %in% c("male", "female"), 
+         q11_education != "NA", 
+         q02_age_group != "NA") %>% 
+  ggplot(aes(x = q01_gender)) +
+         geom_bar(fill = "#4DBBD599") +
+         scale_y_continuous(breaks = seq(0, 1600, 250), 
+                            labels = seq(0, 1600, 250), 
+                            limits = c(0, 1600)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.x = element_blank()) +
+         facet_grid(cols = vars(q11_education), 
+                    rows = vars(q02_age_group))
+
+```
+
+
+### Descriptives of PHQ8 and distinct groups {.tabset .tabset-pills}
+
+#### Depression by gender age and other demographics
+```{r}
+data_full %>%
+  filter(q01_gender != "other", 
+         PHQ8 != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.x = element_blank()) +
+         facet_grid(cols = vars(country)) + 
+         scale_color_npg() + 
+         ggtitle("Countries")
+
+data %>% 
+  filter(q01_gender != "other", 
+         q02_age_group != "NA",
+         PHQ8 != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.x = element_blank()) +
+         facet_grid(cols = vars(q02_age_group)) + 
+         scale_color_npg() + 
+         ggtitle("Age groups")
+
+# For reproducibility of results
+set.seed(2021)
+
+data %>% 
+  filter(q01_gender != "other",
+         q02_age_group != "NA",
+         PHQ8 != "NA") %>% 
+  ggplot(aes(x = q02_age, 
+             y = PHQ8)) +
+         geom_jitter(na.rm	= TRUE, 
+                     size = 1, 
+                     alpha = 0.1) +
+         stat_smooth(method = "gam", 
+                     formula = y ~ x, 
+                     na.rm	= TRUE, 
+                     aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.title = element_blank()) +
+         scale_x_continuous(limits = c(16, 92), 
+         breaks = seq(from = 16, 
+                      to = 92, 
+                      by = 8)) + 
+         scale_color_npg() +
+         xlab("Age") + 
+         ggtitle("Age groups")
+
+data %>% 
+  filter(q01_gender != "other", 
+         q03_relationship_type != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.x = element_blank()) +
+         facet_grid(cols = vars(q03_relationship_type)) + 
+         scale_color_npg() +
+         ggtitle("Relationship type")
+
+data %>%
+  filter(q01_gender != "other", 
+         q11_education != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.x = element_blank()) +
+         facet_grid(cols = vars(q11_education)) + 
+         scale_color_npg() +
+         ggtitle("Educational attainment")
+
+data %>%
+  filter(q01_gender != "other") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.x = element_blank()) +
+         facet_grid(cols = vars(q04_children)) + 
+         scale_color_npg() +
+         ggtitle("Children")
+```
+
+#### Depression and Covid-related circumstances
+```{r}
+data %>%
+  filter(q01_gender != "other", 
+         q18_02_soc_media != "NA",
+         q02_age_group != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.y = element_blank()) +
+         facet_grid(cols = vars(q18_02_soc_media), rows = vars(q02_age_group)) + 
+         scale_color_npg() +
+         ggtitle("Social media") + 
+         coord_flip()
+
+data %>%
+  filter(q01_gender != "other", 
+         q20_public_info != "NA",
+         q02_age_group != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.y = element_blank()) +
+         facet_grid(cols = vars(q20_public_info), rows = vars(q02_age_group)) + 
+         scale_color_npg() +
+         ggtitle("Enough information") + 
+         coord_flip()
+
+data %>%
+  filter(q01_gender != "other", 
+         q34_02_face_mask != "NA",
+         q02_age_group != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.y = element_blank()) +
+         facet_grid(cols = vars(q34_02_face_mask), rows = vars(q02_age_group)) + 
+         scale_color_npg() +
+         ggtitle("Face mask wearing") + 
+         coord_flip()
+
+data %>%
+  filter(q01_gender != "other", 
+         q34_07_hand_washing != "NA",
+         q02_age_group != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.y = element_blank()) +
+         facet_grid(cols = vars(q34_07_hand_washing), rows = vars(q02_age_group)) + 
+         scale_color_npg() +
+         ggtitle("Increased hand washing") + 
+         coord_flip()
+data %>%
+  filter(q01_gender != "other", 
+         q36_econ_worry != "NA",
+         q02_age_group != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.y = element_blank()) +
+         facet_grid(cols = vars(q36_econ_worry), rows = vars(q02_age_group)) + 
+         scale_color_npg() + 
+         ggtitle("Perceived economic impact of Covid") + 
+         coord_flip()
+
+```
+
+#### Depression and lifestyle factors
+```{r}
+data %>%
+  filter(q01_gender != "other", 
+         q35_01_contact_close_family != "NA",
+         q02_age_group != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.y = element_blank()) +
+         facet_grid(cols = vars(q35_01_contact_close_family), rows = vars(q02_age_group)) + 
+         scale_color_npg() +
+         ggtitle("Frequency of physical contact - close family") + 
+         coord_flip()
+
+data %>%
+  filter(q01_gender != "other", 
+         q35_03_contact_friends != "NA",
+         q02_age_group != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.y = element_blank()) +
+         facet_grid(cols = vars(q35_03_contact_friends), rows = vars(q02_age_group)) + 
+         scale_color_npg() +
+         ggtitle("Frequency of physical contact - friends") + 
+         coord_flip()
+
+data %>%
+  filter(q01_gender != "other", 
+         q38_alcohol != "NA",
+         q02_age_group != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.y = element_blank()) +
+         facet_grid(cols = vars(q38_alcohol), rows = vars(q02_age_group)) + 
+         scale_color_npg() +
+         ggtitle("Alcohol") + 
+         coord_flip()
+
+data %>%
+  filter(q01_gender != "other", 
+         q40_smoking != "NA",
+         q02_age_group != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.y = element_blank()) +
+         facet_grid(cols = vars(q40_smoking), rows = vars(q02_age_group)) + 
+         scale_color_npg() +
+         ggtitle("Smoking") + 
+         coord_flip()
+
+data %>%
+  filter(q01_gender != "other", 
+         q42_sport != "NA",
+         q02_age_group != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.y = element_blank()) +
+         facet_grid(cols = vars(q42_sport ), rows = vars(q02_age_group)) + 
+         scale_color_npg() +
+         ggtitle("Sport") + 
+         coord_flip()
+```
+
+
+#### Depression and health
+```{r}
+data %>%
+  filter(q01_gender != "other", 
+         q47_self_reporting_health != "NA", 
+         q02_age_group != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.y = element_blank()) +
+         facet_grid(cols = vars(q47_self_reporting_health), rows = vars(q02_age_group)) + 
+         scale_color_npg() + 
+         ggtitle("Self-reported Health") + 
+         coord_flip()
+
+data %>%
+  filter(q01_gender != "other", 
+         q48_chronic_illness != "NA", 
+         q02_age_group != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.y = element_blank()) +
+         facet_grid(cols = vars(q48_chronic_illness), rows = vars(q02_age_group)) + 
+         scale_color_npg() + 
+         ggtitle("Chronic illness") + 
+         coord_flip()
+
+data %>%
+  filter(q01_gender != "other", 
+         q49_health_limitations != "NA", 
+         q02_age_group != "NA") %>% 
+  ggplot(aes(y = PHQ8, 
+             x = q01_gender)) +
+         geom_boxplot(na.rm = TRUE, 
+                      aes(color = q01_gender)) +
+         theme_bw() +
+         theme(legend.position = "none", axis.title.y = element_blank()) +
+         facet_grid(cols = vars(q49_health_limitations ), rows = vars(q02_age_group)) + 
+         scale_color_npg() + 
+         ggtitle("Health limitations") + 
+         coord_flip()
+
+```
+
 
 ```{r PHQ8 transformation, include=FALSE}
 # Normality transformation: finding lambda for entire model that 
@@ -455,7 +776,7 @@ data_corr <- cbind(data_corr, PHQ8_t)
 
 res1 <- cor.mtest(data_corr, conf.level = .95)
 
-#Correlation matrix using Spearman coefficient (values with p>0.05 are crossed)
+#Correlation matrix using Spearman coefficient (values with p > 0.05 are crossed)
 corrplot(cor(data_corr, 
              method = "spearman", 
              use = "complete.obs"), 
@@ -477,7 +798,7 @@ linreg_theory <- jmv::linReg(
     factors = vars("q01_gender",
                    "q03_relationship_type",
                    "q04_children",
-                   "q11_education",
+                   # "q11_education",
                    "q18_02_soc_media",
                    "q20_public_info",
                    "q34_02_face_mask",
@@ -496,8 +817,8 @@ linreg_theory <- jmv::linReg(
             "q01_gender",
             "q02_age",
             "q03_relationship_type",
-            "q04_children",
-            "q11_education"),
+            "q04_children"),
+            # "q11_education"),
         list(
             "q18_02_soc_media",
             "q20_public_info",
@@ -560,9 +881,9 @@ linreg_theory <- jmv::linReg(
         list(
             var = "q49_health_limitations",
             ref = "limits"),
-        list(
-            var = "q11_education",
-            ref = "low"),
+        # list(
+        #     var = "q11_education",
+        #     ref = "low"),
         list(
             var = "q48_chronic_illness",
             ref = "yes")),
@@ -788,7 +1109,32 @@ anx_index_descriptives <- jmv::descriptives(
 #### Plots
 
 ```{r anx index plot, comment = ""}
-anx_index_descriptives$plots
+
+data %>%
+  filter(concern_index != "NA") %>% 
+  ggplot(aes(y = concern_index)) +
+         geom_boxplot(fill = "#4DBBD599") +
+         theme_bw() +
+         scale_y_continuous(breaks = seq(0, 10, 1), 
+                            labels = seq(0, 10, 1), 
+                            limits = c(0, 10)) +
+         theme(legend.position = "none", 
+               axis.title.x = element_blank(),
+               axis.text.x = element_blank(), 
+               axis.ticks.x = element_blank(), 
+               axis.line.x = element_blank(), 
+               panel.grid.major.x = element_blank(), 
+               panel.grid.minor = element_blank())
+
+data %>% 
+   filter(concern_index != "NA") %>% 
+   ggplot(aes(x = concern_index)) +
+        geom_density(fill = "#4DBBD599") +
+        scale_x_continuous(breaks = seq(0, 10, 1), 
+                           labels = seq(0, 10, 1), 
+                           limits = c(0, 10)) +
+         theme_bw() +
+         theme(legend.position = "none")
 ```
 
 #### Descriptives
@@ -824,7 +1170,6 @@ labels_H76 <- list(X = "Social Media",
                    W = "Age", 
                    Z = "Gender")
 ```
-
 
 ### Path analysis model structure {.tabset .tabset-pills}
 
@@ -1048,7 +1393,6 @@ library(fpc)
 library(NbClust)
 library(cluster)
 library(factoextra)
-library(tidyr)
 
 data_scaled <- na.omit(scale(data_corr))
 
@@ -1066,13 +1410,13 @@ resnumclust <- NbClust(data_scaled, distance = "euclidean", min.nc = 2, max.nc =
 resnumclust
 fviz_nbclust(resnumclust)
 
-#calculamos los dos clústers
+#
 pam9 <- pam(data_scaled, 9)
 print(pam9)
 pam2 <- pam(data_scaled, 2)
 print(pam2)
 
-#probamos algunas visualizaciones
+#
 fviz_cluster(pam2, data = data_scaled, ellipse.type = "norm")
 fviz_cluster(pam9, data = data_scaled)
 
@@ -1080,13 +1424,13 @@ res9 <- hcut(data_scaled, k = 9, stand = TRUE, method = "median")
 fviz_dend(res9, rect = TRUE, cex = 0.5,
           k_colors = "simpsons")
 
-#le pedimos un pequeño resumen 
+#
 USArrests %>%
   mutate(Cluster = pam9$clustering) %>%
   group_by(Cluster) %>%
   summarise_all("mean")
 
-#lo pegamos en nuestro data frame y lo dibujamos ;)
+#
 data_scaled <- USArrests
 data_scaled
 data_scaled <- scale(USArrests)
